# opengl-5-axis

./: .gitignore  CMakeLists.txt  game.cpp  game.h  generater_functions.cpp  main.cpp
headers/: camera.h  game.h  generater_functions.h  include_libs.h  material.h  mesh.h  model.h  objectLoader.h  primitives.h  shader.h  vertex.h
shaders/: fragment_core.glsl  vertex_core.glsl
